--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
   que tenga al
   %strong pan como protagonista
   y puedes
-  %strong ganar $ 5, 000 dólares.
+  %strong ganar $ 5,000 dólares.
   Además, vive la experiencia de
   %strong cocinar en la Final de la Feria Mistura.
 .video
