--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
   %ul
     %li.like
       :erb
-        <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=171113506293961&amp;xfbml=1"></script><fb:like href="http://alpha-kato.heroku.com" send="false" layout="button_count" width="60" show_faces="false" font=""></fb:like>
+        <div id="fb-root"></div><script src="http://connect.facebook.net/en_US/all.js#appId=171113506293961&amp;xfbml=1"></script><fb:like href="http://apps.facebook.com/masbuenoqueelpan" send="false" layout="button_count" width="60" show_faces="false" font=""></fb:like>
     %li
       %ul
         %li
