--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1270,6 +1270,7 @@ h2#contest_logo a, div#logo h1 a{
   display:block;
   width:148px;
   margin:0 auto;
+  margin-bottom:5px;
 }
 #mistura:hover{
   background:none;
