--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,9 @@
     /[if IE]
       %link{:href=>"/stylesheets/ie.css", :media=>"screen", :rel=>"stylesheet",  :type=>"text/css"}
     = csrf_meta_tag
+    %meta{:content => "Primer Concurso Más Bueno Que El Pan", :property => "og:title"}/
+    %meta{:content => "Cuenta Ganadora presenta el Primer Concurso Más Bueno Que El Pan. Sube tu receta que tenga al pan como protagonista y puedes ganar $ 5,000 dólares. Además, vive la experiencia de cocinar en la Final de la Feria Mistura.", :property => "og:description"}/
+    %meta{:content => "/images/logo_concurso.png", :property => "og:image"}/
   %body
     .page
       .whole
