--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -3,10 +3,10 @@
     .title
       = link_to truncate(message.title, :length => 15), message, :title => message.title
     .icons
-      = link_to "Facebook", message_url(message), :class => "facebook_icon"
+      = link_to "Facebook", facebook_recipe_url(message), :class => "facebook_icon"
       = link_to "Twitter", "http://twitter.com/share?url=#{URI.escape(message_url(message))}", :class => "twitter_icon"
   .photo_zone
-    = link_to message do
+    = link_to facebook_recipe_path(message) do
       - if message.photo_file_name
         = image_tag message.photo.url(:thumb)
       - else
