--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -28,7 +28,7 @@
               %ul#most_voted
                 = render :partial => "messages/message", :collection => @most_voted, :as => :message
               .additional
-                = link_to "Ver todos", messages_path, :class=> "button"
+                = link_to "Ver todos", facebook_recipes_path, :class=> "button"
         #footer
           = link_to "Términos y condiciones del concurso", terms_path, :class => "terms_button"
     %script{:src => "http://connect.facebook.net/en_US/all.js"}
