--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -10,6 +10,8 @@
     %meta{:content => @message.title, :property => "og:title"}/
     %meta{:content => @message.content, :property => "og:description"}/
     %meta{:content => @message.photo.url(:thumb), :property => "og:image"}/
+    %meta{:content => "Concurso Más Bueno Que El Pan", :property => "og:site"}/
+
   %body
     .page
       .whole
