--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -1,12 +1,15 @@
 !!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xmlns:fb" => "http://www.facebook.com/2008/fbml"}
   %head
-    %title Kato
+    %title Primer Concurso Más Bueno Que El Pan
     %link{:href => "http://fonts.googleapis.com/css?family=Gloria+Hallelujah", :rel => "stylesheet", :type => "text/css"}/
     = include_stylesheets :app
     /[if IE]
       %link{:href=>"/stylesheets/ie.css", :media=>"screen", :rel=>"stylesheet",  :type=>"text/css"}
     = csrf_meta_tag
+    %meta{:content => "Primer Concurso Más Bueno Que El Pan", :property => "og:title"}/
+    %meta{:content => "Cuenta Ganadora presenta el Primer Concurso Más Bueno Que El Pan. Sube tu receta que tenga al pan como protagonista y puedes ganar $ 5,000 dólares. Además, vive la experiencia de cocinar en la Final de la Feria Mistura.", :property => "og:description"}/
+    %meta{:content => "http://alpha-kato.heroku.com/images/logo_concurso.png", :property => "og:image"}/
   %body.list
     .page
       .whole
