--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,15 +1,10 @@
 %p.description
-  %strong Cuenta Ganadora
-  presenta el
-  %strong Primer Concurso Más Bueno Que El Pan.
-  Sube tu
-  %strong receta
-  que tenga al
-  %strong pan como protagonista
-  y puedes
-  %strong ganar $ 5,000 dólares.
-  Además, vive la experiencia de
-  %strong cocinar en la Final de la Feria Mistura.
+  Les rendimos homenaje al pan
+  %strong premiando con US$ 5,000
+  a la mejor receta que tenga al
+  %strong pan como ingrediente principal.
+  Además, los 5 finalistas vivirán la experiencia de
+  %strong cocinar en Mistura.
 .video
   = image_tag "video.jpg", :width => "500"
 
