--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -56,19 +56,4 @@
 
 
     = include_javascripts :app
-
-    :erb
-      <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-17178707-24']);
-        _gaq.push(['_trackPageview']);
-
-        (function() {
-          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-      </script>
-
-
-    %script{:src => "http://js.pusherapp.com/1.8/pusher.min.js", :type => "text/javascript"}
+    = render :partial => 'layouts/footer'
