--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -79,7 +79,9 @@ max-width: 150px;
 	http://kato.dev/stylesheets/layout.css
 	http://localhost:3000/stylesheets/layout.css
 */
-
+html{
+  width: 759px;
+}
 body {
 	/*background-image: -webkit-gradient(
     linear,
@@ -93,7 +95,7 @@ background-image: -moz-linear-gradient(
     rgb(43,88,143) 50%,
     rgb(28,49,77) 20%
 );*/
-
+  width: 759px;
 	margin: 0px;
 	/*background: transparent url(../images/background.png?1312332283) -19px top;*/
   background: #cfd8e6 url(../images/background.png?1312332283) repeat-x;
