--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,5 +1,5 @@
 %p.description
-  Les rendimos homenaje al pan
+  Le rendimos homenaje al pan
   %strong premiando con US$ 5,000
   a la mejor receta que tenga al
   %strong pan como ingrediente principal.
