--- a/public/assets/app.css
+++ b/public/assets/app.css
@@ -81,6 +81,7 @@ max-width: 150px;
 */
 html{
   width: 759px;
+  overflow:hidden;
 }
 body {
 	/*background-image: -webkit-gradient(
@@ -100,6 +101,7 @@ background-image: -moz-linear-gradient(
 	/*background: transparent url(../images/background.png?1312332283) -19px top;*/
   background: #cfd8e6 url(../images/background.png?1312332283) repeat-x;
 	padding: 0px;
+  overflow:hidden;
 }
 
 .page {
