Changes to text

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,12 +1,12 @@
 %li.message{:id => "message_#{message.id}", :title => message.title, :class => truncating_text_class(message.title)}
   .share_zone
     .title
-      = link_to truncate(message.title, :length => 15), facebook_recipe_path(message), :title => message.title, :rel => message.title
+      = link_to truncate(message.title, :length => 15), "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(message)}", :title => message.title, :rel => message.title
     .icons
       = link_to "Facebook", "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(message)}", :class => "facebook_icon"
       = link_to "Twitter", "http://twitter.com/share?url=#{URI.escape(message_url(message))}", :class => "twitter_icon"
   .photo_zone
-    = link_to facebook_recipe_path(message) do
+    = link_to "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(message)}" do
       - if message.photo_file_name
         = image_tag message.photo.url(:thumb)
       - else
