--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,6 +11,6 @@
     %li
       %ul
         %li
-          %a{:href => root_path, :class => "button"} Inicio
+          %a{:href => 'http://apps.facebook.com/masbuenoqueelpan/', :class => "button"} Inicio
         %li
-          %a{:href => add_messages_path, :class => "button"} Sube tu receta
+          %a{:href => "http://apps.facebook.com/masbuenoqueelpan#{add_recipes_path}", :class => "button"} Sube tu receta
