--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -25,7 +25,7 @@
                 Vota por tu receta de pan favorita y ayuda a nuestro jurado a escoger a los 5 finalistas que participar&aacute;n en la Gran Final de Mistura.
               = yield
         #footer
-          = link_to "Términos y condiciones del concurso", terms_path, :class => "terms_button"
+          = link_to "Términos y condiciones del concurso", "http://apps.facebook.com/masbuenoqueelpan#{terms_path}", :class => "terms_button"
     %script{:src => "http://connect.facebook.net/en_US/all.js"}
     :erb
       <script type="text/javascript">
