--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,7 +6,8 @@
   Además, los 5 finalistas vivirán la experiencia de
   %strong cocinar en Mistura.
 .video
-  = image_tag "video.jpg", :width => "500"
+  :erb
+    <iframe width="500" height="314" src="http://www.youtube.com/embed/sBBZUhaaYo0?controls=0&disablekb=1&enablejsapi=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
 
 .section_header
   %h3.left Las últimas recetas
