--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,7 +7,7 @@
   %strong cocinar en Mistura.
 .video
   :erb
-    <iframe width="500" height="314" src="http://www.youtube.com/embed/sBBZUhaaYo0?controls=0&disablekb=1&enablejsapi=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+    <iframe width="500" height="314" src="http://www.youtube.com/embed/sBBZUhaaYo0?controls=0&disablekb=1&enablejsapi=1&iv_load_policy=3&modestbranding=1&rel=0&showinfo=0&amp;wmode=transparent" frameborder="0" allowfullscreen></iframe>
 
 .section_header
   %h3.left Las últimas recetas
