Updates with link

--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -4,7 +4,7 @@
       = link_to truncate(message.title, :length => 15), "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(message)}", :title => message.title, :rel => message.title
     .icons
       = link_to "Facebook", "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(message)}", :class => "facebook_icon"
-      = link_to "Twitter", "http://twitter.com/share?url=#{URI.escape(message_url(message))}", :class => "twitter_icon"
+      = link_to "Twitter", message.twitter_link, :class => "twitter_icon"
   .photo_zone
     = link_to "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(message)}" do
       - if message.photo_file_name
