Readds oauth to FB.init

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,8 @@
         appId : '136578643087393',
         status : true, // check login status
         cookie : true, // enable cookies to allow the server to access the session
-        xfbml : true // parse XFBML
+        xfbml : true, // parse XFBML
+        oauth : true
         });
 
         FB.getLoginStatus(function(response) {
