--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -39,7 +39,8 @@
         appId : '136578643087393',
         status : true, // check login status
         cookie : true, // enable cookies to allow the server to access the session
-        xfbml : true // parse XFBML
+        xfbml : true, // parse XFBML
+        oauth: true
         });
 
         window.setTimeout(function() {
