--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -47,7 +47,8 @@
         appId : '136578643087393',
         status : true, // check login status
         cookie : true, // enable cookies to allow the server to access the session
-        xfbml : true // parse XFBML
+        xfbml : true, // parse XFBML
+        oauth : true
         });
 
         window.setTimeout(function() {
@@ -65,4 +66,3 @@
 
     = include_javascripts :app
     = render :partial => 'layouts/footer'
-    
