--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -13,4 +13,4 @@
         %li
           %a{:href => 'http://apps.facebook.com/masbuenoqueelpan/', :class => "button"} Inicio
         %li
-          %a{:href => "http://apps.facebook.com/masbuenoqueelpan#{add_recipes_path}", :class => "button"} Sube tu receta
+          %a#new_message_button{:href => "http://apps.facebook.com/masbuenoqueelpan#{add_recipes_path}", :class => "button"} Sube tu receta
