Moves to signed request

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -45,7 +45,7 @@
         status : true, // check login status
         cookie : true, // enable cookies to allow the server to access the session
         xfbml : true,
-        oauth : true // parse XFBML
+        oauth : true //
         });
 
         window.setTimeout(function() {
