--- a/app/views/votes/create.js.erb
+++ b/app/views/votes/create.js.erb
@@ -1,4 +1,4 @@
 <% @message.reload %>
 $('#message_<%= @message.id %> .votes').html('<%= escape_javascript(render(:partial => "/messages/message_data", :object =>@message)) %>');
 
-streamPublish("Concurso Más bueno que el Pan",'<%= @message.title %>','<%= "http://apps.facebook.com/masbuenoqueelpan#{facebook_recipe_path(@message)}" %>','<%= escape_javascript(@message.content) %>','<%= URI.escape(@message.photo.url) %>');
+openWindow('https://www.facebook.com/dialog/feed?link=<%= URI.escape("http://apps.facebook.com/masbuenoqueelpan/#{message_path(@message)}") %>&picture=<%= URI.escape(@message.photo_url) %>&name=<%= URI.escape(@message.title) %>&caption=<%= URI.escape("Concurso Más bueno que el Pan") %>&description=<%= escape_javascript(@message.content) %>&display=iframe&redirect_uri=http://alpha-kato.heroku.com&access_token=<%= fb_token %>&app_id=136578643087393', 'after_vote', 560, 300);
