--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xmlns:fb" => "http://www.facebook.com/2008/fbml"}
   %head
-    %title Kato
+    %title Primer Concurso Más Bueno Que El Pan
     %link{:href => "http://fonts.googleapis.com/css?family=Gloria+Hallelujah", :rel => "stylesheet", :type => "text/css"}/
     = include_stylesheets :app
     /[if IE]
