--- a/app/views/layouts/messages_list.html.haml
+++ b/app/views/layouts/messages_list.html.haml
@@ -71,5 +71,7 @@
       }());
 
 
+    = include_javascripts :libs
+    = include_javascripts :fancybox
     = include_javascripts :app
     = render :partial => 'layouts/footer'
