--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -78,5 +78,7 @@
       }());
 
 
+    = include_javascripts :libs
+    = include_javascripts :fancybox
     = include_javascripts :app
     = render :partial => 'layouts/footer'
