--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -79,6 +79,8 @@
 
 
     = include_javascripts :libs
-    = include_javascripts :fancybox
+    = javascript_include_tag '/javascripts/fancybox/jquery.easing-1.3.pack.js'
+    = javascript_include_tag '/javascripts/fancybox/jquery.mousewheel-3.0.4.pack.js'
+    = javascript_include_tag '/javascripts/fancybox/jquery.fancybox-1.3.4.pack.js'
     = include_javascripts :app
     = render :partial => 'layouts/footer'
