--- a/app/views/layouts/facebook.html.haml
+++ b/app/views/layouts/facebook.html.haml
@@ -3,6 +3,6 @@
   %head
     :javascript
       window.onload = function(){
-        parent.$.fancybox.close();
+        parent.document.$.fancybox.close();
       }
   %body
