--- a/app/views/layouts/facebook.html.haml
+++ b/app/views/layouts/facebook.html.haml
@@ -1,8 +1,10 @@
 !!!
 %html{:xmlns => "http://www.w3.org/1999/xhtml", "xmlns:fb" => "http://www.facebook.com/2008/fbml"}
   %head
-    :javascript
-      window.onload = function(){
-        parent.$.fancybox.close();
-      }
+    :erb
+      <script type="text/javascript">
+        window.onload = function(){
+          parent.$.fn.fancybox.close();
+        }
+      </script>
   %body
