--- a/app/views/layouts/facebook.html.haml
+++ b/app/views/layouts/facebook.html.haml
@@ -4,7 +4,7 @@
     :erb
       <script type="text/javascript">
         window.onload = function(){
-          parent.$.fn.fancybox.close();
+          parent.$.fancybox.close();
         }
       </script>
   %body
