--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,6 +11,6 @@
     %li
       %ul
         %li
-          %a{:href => 'http://apps.facebook.com/masbuenoqueelpan/', :class => "button"} Inicio
+          %a#back_to_home{:href => 'http://apps.facebook.com/masbuenoqueelpan/', :class => "button"} Inicio
         %li
           %a#new_message_button{:href => "http://apps.facebook.com/masbuenoqueelpan#{add_recipes_path}", :class => "button"} Sube tu receta
