Mostrar usuario creador de la receta

--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -42,8 +42,10 @@
       .content
         = simple_format @message.content
 
-  - if @user
-    %p Publicado por #{@user.name}
+    - if @user
+      %p.published
+        Publicado por
+        %strong #{@user.name.titleize}
 
   - unless @message.published?
     .message_actions
