--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -11,6 +11,8 @@
         = image_tag message.photo.url(:thumb), :title => message.title, :alt => message.title
       - else
         = image_tag "default.jpg"
+    - if message.user
+      %img.author_picture{:src => 'http://graph.facebook.com/#{message.user.facebook_uid}/picture', :width => 32, :height => 32}
   .meta_data
     .avatar
     .votes
