--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -344,7 +344,7 @@ p.description {
 
 #messages_list h3 {
 	margin-top: 0px;	
-	margin-bottom: 25px;
+	margin-bottom: 10px;
 	font-size: 35px;
 	line-height: 1em;
 }
@@ -968,6 +968,7 @@ div.photo_zone {
 	text-align: center;
 	height: 110px;
 	overflow: hidden;
+  position: relative;
 }
 div.meta_data {
 	padding: 5px 5px;
@@ -1112,6 +1113,12 @@ div.content ul li {
 div.photo_zone a {
 	height: 110px;
 	display: block;
+}
+
+div.photo_zone img.author_picture{
+  position: absolute;
+  left: 0;
+  bottom: 1px;
 }
 
 .tooltip {
