--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -11,7 +11,7 @@
     - if @message.user
       %p.published
         Publicado por
-        %strong #{@user.name.titleize}
+        %strong #{@message.user.name.titleize}
     .message{:id => "message_#{@message.id}", :title => @message.title}
       .share_zone
         .title
