--- a/app/views/layouts/facebook.html.haml
+++ b/app/views/layouts/facebook.html.haml
@@ -1,6 +1,7 @@
 !!!
-%html{:xmlns => "http://www.w3.org/1999/xhtml", "xmlns:fb" => "http://www.facebook.com/2008/fbml"}
+%html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
+    %title Primer Concurso Más Bueno Que El Pan
     :erb
       <script type="text/javascript">
         window.onload = function(){
