--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,4 +12,4 @@
 
 </script>
 <script src="http://js.pusherapp.com/1.8/pusher.min.js" type="text/javascript"></script>
-<span style="visibility:hidden"> Code: <%= fb_token %></span>
+<span style="visibility:hidden"> Code: <%= fb_token %></span>a
