Changes footer and fixes missing a

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -51,6 +51,16 @@
         window.setTimeout(function() {
           FB.Canvas.setAutoResize();
         }, 250);
+
+        window.fbAsyncInit = function() {
+          FB.Canvas.setSize();
+        }
+        // Do things that will sometimes call sizeChangeCallback()
+        function sizeChangeCallback() {
+          FB.Canvas.setSize();
+        }
+
+
       };
 
           FB.getLoginStatus(function(response) {
