--- a/app/views/layouts/open_graph.html.haml
+++ b/app/views/layouts/open_graph.html.haml
@@ -54,6 +54,19 @@
         window.setTimeout(function() {
           FB.Canvas.setAutoResize();
         }, 250);
+
+        window.setTimeout(function() {
+          FB.Canvas.setAutoResize();
+        }, 250);
+
+        window.fbAsyncInit = function() {
+          FB.Canvas.setSize();
+        }
+        // Do things that will sometimes call sizeChangeCallback()
+        function sizeChangeCallback() {
+          FB.Canvas.setSize();
+        }
+
       };
 
         FB.getLoginStatus(function(response) {
