--- a/app/views/home/terms.html.haml
+++ b/app/views/home/terms.html.haml
@@ -8,6 +8,7 @@
         Dirigida a clientes que tengan una Cuenta Ganadora, caso contrario
         %a{:href => "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp"} deberá abrir una. 
         También participan clientes que tengan una Tarjeta de Crédito o formen parte de Mundo Sueldo.
+      %li Participan los usuarios de Tarjetas de Crédito y Mundo Sueldo que hayan creado sus cuentas antes del 31 de julio de 2011.
       %li El cliente deberá enviar una receta que tenga al pan o algún derivado como ingrediente principal de la receta, a través de la página Perú Gourmet en facebook.
       %li El 2 de setiembre se seleccionarán las 50 recetas más votadas en la página Facebook de Perú Gourmet, que serán revisadas y filtradas finalmente por un jurado encabezado por Gastón Acurio para determinar los 5 participantes que serán publicadas el 5 de setiembre y que irán a la gran final en Mistura 2011.
       %li El premio se entregará el domingo 18 de setiembre en la Plaza Perú Gourmet ubicada en la Feria Mistura 2011, luego de que el jurado determine el ganador en base a la preparación que previamente los finalistas realicen.
