Cambio en terms

--- a/app/views/home/terms.html.haml
+++ b/app/views/home/terms.html.haml
@@ -5,17 +5,16 @@
     %ul
       %li Registro de recetas y votación hasta el 01 de setiembre de 2011.
       %li
-        Dirigida a clientes que tengan una Cuenta Ganadora, caso contrario
-        %a{:href => "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp"} deberá abrir una. 
-        También participan clientes que tengan una Tarjeta de Crédito o formen parte de Mundo Sueldo.
+        Dirigida a clientes que tengan una Cuenta Ganadora, Tarjeta de Crédito o pertenezcan a Mundo Sueldo. Para averiguar cómo abrir una Cuenta Ganadora entra
+        %a{:href => "http://bbvacontinental.pe/tlpu/jsp/pe/esp/paratiN/depositos/cahorro/ahorrsupdep/index.jsp"} aquí.
       %li Participan los usuarios de Tarjetas de Crédito y Mundo Sueldo que hayan creado sus cuentas antes del 31 de julio de 2011.
-      %li El cliente deberá enviar una receta que tenga al pan o algún derivado como ingrediente principal de la receta, a través de la página Perú Gourmet en facebook.
+      %li El cliente deberá enviar una receta que tenga pan o algún derivado como ingrediente principal de la receta, a través de la página Perú Gourmet en facebook.
       %li El 2 de setiembre se seleccionarán las 50 recetas más votadas en la página Facebook de Perú Gourmet, que serán revisadas y filtradas finalmente por un jurado encabezado por Gastón Acurio para determinar los 5 participantes que serán publicadas el 5 de setiembre y que irán a la gran final en Mistura 2011.
       %li El premio se entregará el domingo 18 de setiembre en la Plaza Perú Gourmet ubicada en la Feria Mistura 2011, luego de que el jurado determine el ganador en base a la preparación que previamente los finalistas realicen.
       %li Se entregará un único premio de US$ 5,000 al ganador, que firmará el acta de entrega del premio.
       %li El BBVA Continental se contactará con los finalistas. No obstante, los finalistas podrán confirmar su asistencia como máximo el 12 de setiembre 2011, vía telefónica al 211-2698.
-      %li En caso algún finalista resida en alguna ciudad de provincia, el banco le abonará a su cuenta ganadora US$ 500 para cubrir los gastos de transporte y estadía para asistir a la final en la feria Mistura 2011. Para hacer efectivo dicho abono, el cliente deberá acercarse a la oficina de su localidad donde abrió su cuenta ganadora hasta el 12 de setiembre 2011. En esa oportunidad suscribirá un acta en la que se compromete a asistir a la final del concurso.
+      %li En caso algún finalista resida en alguna ciudad de provincia, el banco le abonará US$ 500 para cubrir los gastos de transporte y estadía para asistir a la final en la feria Mistura 2011. Si es cliente de Cuenta Ganadora o Mundo Sueldo se abonará a su cuenta y si es cliente de Tarjeta de Crédito se entregará una tarjeta regalo, las cuales están sujetas a las condiciones del producto. Para hacer efectivo dicho abono el cliente deberá acercarse a la oficina de su localidad donde abrió su cuenta ganadora hasta el 12 de setiembre 2011. En esa oportunidad suscribirá un acta en la que se compromete a asistir a la final del concurso.
       %li De no cumplir con los plazos se reemplazará a dicho finalista con el siguiente concursante elegido por el jurado.
       %li Cada votante podrá ejercer su voto una vez por receta. Sólo se tomará en cuenta los votos de las recetas publicadas en facebook del banco.
-      %li La participación en este concurso implica la aceptación de todas y cada uno de estos términos y condiciones. El concursante además, otorga al BBVA Continental total libertad y derechos sobre la publicación de la receta.
+      %li La participación en este concurso implica la aceptación de todas y cada uno de estos términos y condiciones. El concursante además, otorga al BBVA Banco Continental total libertad y derechos sobre la publicación de la receta.
       %li N° de expediente: 2011-0279021
