--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -4,4 +4,4 @@
   = render @messages
 
 .pagination
-  = will_paginate @messages, :previous_label => "Anterior", :next_label => "Siguiente"
+  = paginate @messages
