--- a/app/views/messages/_message_data.html.haml
+++ b/app/views/messages/_message_data.html.haml
@@ -1,5 +1,5 @@
 .vote_count
-  = message_data.votes_count
+  = message_data.final_count
 .submit
   / - @current_user = User.first
   = simple_form_for Vote.new(:message_id => message_data.id), :remote => true do |f|
